--- a/latex/software.tex
+++ b/latex/software.tex
@@ -22,9 +22,9 @@ The python script also does some other more or less clever stuff at each run. Th
 As with any software there are limitations. The limitations discussed in this chapter will be with regard to physical problems, and not memory or CPU limitations which are described later. \\
 Assuming the dendritic spines stuff will be the final application:\\
 First of all, to specify a source function, one must program it in the Diffusion class (Diffusion::f()). This might be fixed in a later version using inheritance.\\
-The geometry is, currently, limited to a square. Of course we can argue that we have scaled the size to a unit square, but as discussed in chapter \ref{} the actual geometry remains a unit square. 
+The geometry is, currently, limited to a square. Of course we can argue that we have scaled the size to a unit square, but as discussed in chapter \ref{geometry} the actual geometry remains a unit square. 
 Furthermore the same issue arises on the random walks. \\
-As of now, it is unclear if 3d-modeling is supported. This is actually a smaller issue since there is usually little more to learn from switching from 2d to 3d. In any case, the extension to 3d is most likely not very hard, provided we use an array of slices from the cubic matrix describing the solution.
+As of now, it is unclear if 3D-modeling is supported. This is actually a smaller issue since there is usually little more to learn from switching from 2D to 3D. In any case, the extension to 3D is most likely not very hard, provided we use an array of slices from the cubic matrix describing the solution.
 
 \section{Adaptivity}
 
@@ -44,17 +44,17 @@ The program as it stands now (v 1.$\infty$) uses the BE discretization and a hig
 The random walk-part of the software has been excreted as a stand-alone program which communicates with the main-program through a binary .xyz file containing the positions of all walkers in 3d space. This makes it easier to change solver, and implement more advanced solvers like the Direct Simulation Monte Carlo (DSMC) Molecular Dynamics (MD) simulator written by Anders Hafreager (see chapter \ref{}). 
 There are three expensive operations in the algorithm as it stands now with the BE discretization using standard LU-decomposition.
 \begin{itemize}
-\item Random walks are expensive if there are many walkers. The number of calls to the random number generator follows eq. \ref{calls_to_ran} and for the verification process, which required a lot of walkers, this represented a considerable cost. 
+\item Random walks are expensive if there are many walkers. The number of calls to the random number generator follows eq. \eqref{calls_to_ran} and for the verification process, which required a lot of walkers, this represented a considerable cost. 
+\begin{equation}\label{calls_to_ran}
+ N_{\text{calls}} \propto Hc\frac{(x_1-x_0)}{\Delta x}\frac{(y_1-y_0)}{\Delta y}\tilde{T}
+\end{equation}
+where $\tilde{T}$ denotes the number of time steps on the PDE level times the number of time-steps one PDE-step corresponds to on the RW level. Note that this expression will NOT be zero in 1D, and that it is dependent on the PDE-solution.
 As an additional problem we will encounter some overhead upon calling the program, initializing variables and instances and so on. 
 The computationally most demanding function seems to be the round-off function, which is used to place the walkers on the coarse-grained PDE-mesh.
 \item Communicating the positions of all the walkers between the two programs each time-step is very costly.
 \item Translating the positions of the walkers from the unit-square they are walking on to the coarse-grained PDE grid requires calling the ``round'' function from the math library in C++. This function is rather slow, and the program suffers from it. 
 \end{itemize}
 
-\begin{equation}\label{calls_to_ran}
- N_{\text{calls}} \propto Hc\frac{(x_1-x_0)}{\Delta x}\frac{(y_1-y_0)}{\Delta y}\tilde{T}
-\end{equation}
-where $\tilde{T}$ denotes the number of timesteps on the PDE level times the number of time-steps one PDE-step corresponds to on the RW level. Note that this expression will NOT be zero in 1d, and that it is dependent on the PDE-solution.
 
 \subsection{Parallelizability}
 In the final algorithm there are the following stages
@@ -98,9 +98,14 @@ In the same way as Craske et.al \cite{craske2005spines} a section of dendrite wi
 This dendrite section is thought to be in contact with the cell soma, and to have some spines on it. 
 The soma is modeled as a source at the one end of the dendrite section, whereas the other end of the dendrite section is thought to continue branching into narrower and narrower dendrite branches. 
 The branching and the rest of the dendrite will not be modeled in the beginning at least, because the situation in thin branches is thought to be the same as in thick branches with a time-delay and some effects due to a higher surface to volume ratio, all of which are described by Craske et.al. 
+Note that although the diffusion coefficient of PKC$\gamma$ is known, the actual diffusion from the cell soma and into the dendrite is much faster because of membrane binding. 
+This effect becomes obvious when studying the videos referred to by Craske et.al. in which a concentration increase some 40$\mu$m from the cell soma takes only a few seconds bu would have taken several hours in a normal diffusion process with the respective diffusion coefficient. 
+The simulations take this into account by constructing a random, small concentration over the entire dendrite and a larger peak close to soma. 
+
 
 Dendritic spines are modeled as a two-dimensional funnel attached to the dendrite at some number of mesh-point which must correspond to the typical range of spine-neck diameters. 
 This limits the spatial resolution by demanding the narrowest spine necks to connect at two mesh-points (in order for the spine to be two-dimensional). 
+The other parameters on a spine are set randomly, but chosen so they correspond to values reported by Arellano \cite{arellano2007ultrastructure}.
 
 The model can without very much effort be extended to model an entire neuron with a dendrite tree (some modification to the dendrite class is required in order to add a dendrite to an existing dendrite) by making a neuron class containing a dendrite tree linked list and possibly a soma object should one wish to model the soma individually. 
 Other possible extensions include adding and removing spines according to the rules proposed by (\emph{artikkelen Gaute snakket om}) in order to investigate how this affects various diffusion processes in dendrites or dendrite trees. 
